Remove String.isBlank from AppBindings.java